frame/support/test/tests/construct_runtime_ui/invalid_token_after_module.stderr
error: Unexpected tokens, expected one of `::$ident` `::{`, `expanded`, `exclude_parts`, `use_parts`, `=`, `,`
 --> $DIR/invalid_token_after_module.rs:9:18
  |
9 |         system: System ?
  |                        ^
